# Cpm

./: .gitignore  README.md  SPEC.md  cpytoml  pyproject.toml
cpyte/: __init__.py
cpyte/cli/: commands.py  errors.py  executor.py  gethins.py  lockfile.py  main.py  manifest.py  parser.py  sat.py  things.py
tests/: test_parser.py
