[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cpyte-cpm"
version = "1.1.7"
description = "A package manager for cpy"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Albert" }
]
dependencies = [
    "requests>=2.34.2",
    "cpyte",
    "packaging",
]

[project.optional-dependencies]
dev = ["pytest>=9.1.1"]

[project.urls]
Homepage = "https://gitea.5gnew.io.vn/Cpyte-Project/Cpyte"

[project.scripts]
cpm = "cpyte.cli.main:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

# Default package registry for Cpyte packages
# CPM uses https://cypackage.5gnew.io.vn/ as the default registry for Cpyte packages
[[tool.uv.index]]
name = "cypackage"
url = "https://cypackage.5gnew.io.vn/simple/"
default = true

[[tool.uv.index]]
name = "safety"
url = "https://pkgs.safetycli.com/repository/teamparadox/project/wew-package-manager/pypi/simple/"
default = false
